Add publish method to shoppingcart
